# labs

cuda_tasks/: CMakeLists.txt  task_01_vector_add.cu  task_02_function.cu  task_03_slae.cu  task_04_matrix_mul.cu  task_05_array_processing.cu
mpi_tasks/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  run_all.bat
signal_tasks/: CMakeLists.txt  main.cpp  plot++.cpp  plot++.h  python_interpreter.cpp  python_interpreter.h
